# swarm-learning

./: .gitignore  ATTRIBUTIONS.md  CONTRIBUTING.md  DATA_LICENSE.md  README.md
.github/ISSUE_TEMPLATE/: swam-learning-issue-reporting-template.md
docs/: Component_interactions.md  Concepts.md  FAQ.md  Prerequisites.md  RunningSL.md  SWOP-profile-schema.yaml  SWOP-task-schema.yaml  Troubleshooting.md  acronyms.md  docker.md  ml_algorithm.md  papers-and-articles.md  setup.md  swci_tool.md
docs/Generic/: DATA_LICENSE.md  URL.md  papers-and-articles.md  videos.md
docs/Install/: Accessing_Hewlett_Packard_Enterprise_Support.md  Adding_Swarm_Nodes.md  Adding_a_Swarm_Host_in_SLM-UI.md  Centralized_Swarm_diagnostic.md  Configuring_Swarm_Learning.md  Configuring_the_License_Settings.md  Configuring_the_Swarm_Settings.md  Configuring_the_User_Settings.md  Creating_Task_Runners.md  Creating_a_Contract.md  Creating_a_Project_in_SLM-UI.md  Creating_a_task.md  Customer_self_repair.md  Documentation_feedback.md  Download_the_License_Server.md  Environment_variables.md  Execute_Task.md  Executing_a_Task.md  Exposed_port_numbers.md  GNU_General_Public_License.md  HPE Swarm Learning Installation and Configuration Guide.md  HPE_Swarm_Learning_installation.md  IP_address_of_host_systems.md  Install_HPE_Swarm_Learning.md  Install_the_License_Server.md  Installing HPE Swarm Learning Management UI  Installing_HPE_Swarm_Learning_Management_UI (SLM-UI).md  Installing_HPE_Swarm_Learning_Management_UI(SLM-UI).md  Installing_Swarm_Learning_using_SLM-UI.md  Introduction.md  Managing_the_Global_Settings.md  Prerequisites.md  README.md  Regulatory_information.md  Remote_support.md  Revision_history.md  Running Swarm Learning with Spire.md  Running_SLM-UI_Installer.md  Running_Swarm_Learning.md  Running_Swarm_Learning_examples_using_SLM-UI.md  (+14 more)
docs/User/: 1_Introduction.md  Accessing_Hewlett_Packard_Enterprise_Support.md  Accessing_updates.md  Acknowledgments.md  Adapting_an_ML_program_for_Swarm_Learning.md  CIFAR-10.md  Credit_card_fraud_detection.md  Documentation_feedback.md  Examples.md  Experiment_Tracking.md  Frequently_asked_questions.md  HPE Swarm Learning User Guide.md  How_to_Swarm_enable_an_ML_algorithm.md  Launch_Swarm_Learning_using_SWOP.md  MNIST-PYT.md  MNIST.md  Monitoring_Swarm_Learning_training_using_SLM-UI.md  Notices.md  Prerequisite_for_running_reverse_Proxy_examples.md  README.md  Revision_history.md  Running_MNIST_example_using_SLM-UI.md  SWCI_APIs.md  SWOP_architecture_overview.md  SWOP_profile_schema.md  SWOP_profile_schema_example.md  SWOP_profile_schema_example_using_reverse_proxy_parameters.md  SWOP_task.md  SWOP_task_schema.md  SWOP_task_schema_examples.md  Support_and_other_resources.md  Swarm_Learning_Command_Interface.md  Swarm_Learning_Component_Interactions_using_Reverse_Proxy.md  Swarm_Learning_architecture.md  Swarm_Learning_component_interactions.md  Swarm_Learning_concepts.md  Swarm_Log_Collector.md  Swarm_Operator_node_(SWOP).md  Swarm_client_interface-wheels_package.md  TaskRunner Framework.md  (+8 more)
examples/: README.md  gen-cert
examples/breakhis/: README.md  dataset_split.py
examples/breakhis/ml-context/: Dockerfile
examples/breakhis/model/: breakhis.py
examples/cancer-pred/: README.md
examples/cancer-pred/ml-context/: Dockerfile  requirements.txt
examples/cancer-pred/model/: cancer-pred.py
examples/cataract-detection/: README.md  cataract.py
examples/cataract-detection/ml-context/: Dockerfile  requirements.txt
examples/cataract-detection/model/: cataract.py
examples/cifar-10/: README.md
examples/cifar-10/conf/: nested-spire-server-1.conf  nested-spire-server-2.conf  root-spire-agent-1.conf  root-spire-agent-2.conf  root-spire-server.conf
examples/cifar-10/model/: cifar-10.py
examples/cifar10/: CIFAR-10.md  README.md
examples/cifar10/ml-context/: Dockerfile  (+1 more)
examples/diabetes/: README.md  data_reset.py  data_splitting.py
examples/fraud-detection/: Credit_card_fraud_detection.md  README.md
examples/fraud-detection-keras/: README.md
examples/huggingface/: README.md
examples/huggingface-peft/: README.md
examples/mnist/: MNIST.md  README.md
examples/mnist-keras/: README.md
examples/mnist-pyt/: MNIST-PYT.md  README.md
examples/mnist-pytorch/: README.md
examples/nail-disease/: README.md
examples/nih/: README.md
examples/point_clouds/: README.md
examples/reverse-proxy/: Examples_using_reverse_proxy.md  MNIST_using_Reverse_Proxy.md  README.md
examples/utils/: gen-cert
lib/: swarmlearning-2.1.0-py3-none-manylinux_2_24_x86_64.whl  swarmlearning-client-py3-none-manylinux_2_24_x86_64.whl
lib/src/: README.md
lib/src/python-client/: pyproject.toml  setup.cfg  upset.py
lib/src/python-client/swarmlearning/: hf_transformers.py  pyt.py  swci.py  tf.py
lib/src/python-client/swarmlearning/client/: app2if.py  swarm.py
lib/src/python-client/swarmlearning/com/: bridge.py  swifrpc_pb2.py  util.py
lib/swif/: README.md
models/: README.md
models/NN/: README.md
models/utils/: gen-cert
(+172 files in other folders)
